[package]
name = "lok"
version = "0.0.1"
authors = ["wyhaya <wyhaya@gmail.com>"]
edition = "2018"
description = "Calculation code information"
license = "MIT"
homepage = "https://github.com/wyhaya/lok"
repository = "https://github.com/wyhaya/lok.git"


[dependencies]
ace = "0.0.2"
crossbeam-deque = "0.7.1"
num_cpus = "1.10.1"
regex = "1.1.7"