[package]
name = "lok"
version = "0.0.1"
edition = "2018"

authors = ["wyhaya <wyhaya@gmail.com>"]
description = "Calculation code information"
homepage = "https://github.com/wyhaya/lok"
repository = "https://github.com/wyhaya/lok.git"
license = "MIT"
readme = "README.md"

keywords = [
    "codes",
    "count",
    "count-lines-of-code",
    "command-line-tool"
]

[dependencies]
ace = "0.0.2"
crossbeam-deque = "0.7.1"
num_cpus = "1.10.1"
regex = "1.1.7"